fix gallery gap

--- a/assets/css/styleKit.css
+++ b/assets/css/styleKit.css
@@ -568,7 +568,7 @@ h3 {
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 2px;
+  gap: 10px;
   align-items: start;
   content-visibility: auto;
 }
